# sc2-proto-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  build.rs  search-index.js  source-files.js
sc2_proto/: all.html  index.html  sidebar-items.js
sc2_proto/common/: AvailableAbility.t.html  Point2D.t.html  PointI.t.html  RectangleI.t.html  Size2DI.t.html  enum.Race.html  fn.file_descriptor_proto.html  index.html  sidebar-items.js  struct.AvailableAbility.html  struct.ImageData.html  struct.Point.html  struct.Point2D.html  struct.PointI.html  struct.RectangleI.html  struct.Size2DI.html
sc2_proto/data/: AbilityData_Target.t.html  DamageBonus.t.html  Weapon.t.html  Weapon_TargetType.t.html  enum.AbilityData_Target.html  enum.Attribute.html  enum.Weapon_TargetType.html  fn.file_descriptor_proto.html  index.html  sidebar-items.js  struct.AbilityData.html  struct.BuffData.html  struct.DamageBonus.html  struct.EffectData.html  struct.UnitTypeData.html  struct.UpgradeData.html  struct.Weapon.html
sc2_proto/debug/: DebugBox.t.html  DebugCommand.t.html  DebugCommand_oneof_command.t.html  DebugCreateUnit.t.html  DebugDraw.t.html  DebugEndGame.t.html  DebugEndGame_EndResult.t.html  DebugGameState.t.html  DebugKillUnit.t.html  DebugSetScore.t.html  DebugSetUnitValue.t.html  DebugSetUnitValue_UnitValue.t.html  DebugTestProcess.t.html  DebugTestProcess_Test.t.html  enum.DebugCommand_oneof_command.html  enum.DebugEndGame_EndResult.html  enum.DebugGameState.html  (+19 more)
scripts/: deploy.sh
src/: common.rs  data.rs  debug.rs  error.rs  lib.rs  query.rs  raw.rs  sc2api.rs  score.rs  spatial.rs  ui.rs
(+336 files in other folders)
