[package]
name = "sc2-proto"
version = "0.2.0-alpha.0"
authors = ["Andrew J Westlake <kelixes@gmail.com>"]
description = "protocol buffers for the StarCraft II Client API"
license = "MIT"
documentation = "https://docs.rs/sc2-proto"
homepage = "https://github.com/awestlake87/sc2-proto-rs"
repository = "https://github.com/awestlake87/sc2-proto-rs"
build = "build.rs"

[build-dependencies]
protoc-rust = "1.5"

[dependencies]
protobuf = "^1.4"
