[package]
name = "sc2-proto"
version = "0.2.1"
description = "protocol buffers for the StarCraft II Client API"
authors = ["Andrew J Westlake <kelixes@gmail.com>", "Hannes Karppila <hannes.karppila@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/sc2-proto"
homepage = "https://github.com/awestlake87/sc2-proto-rs"
repository = "https://github.com/awestlake87/sc2-proto-rs"
edition = "2018"
build = "build.rs"

[build-dependencies]
protoc-rust = "2.3"

[dependencies]
protobuf = "2.3"
